simple-saml-idp/ssp-idp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ssp-idp
  name: ssp-idp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: ssp-idp
