simple-saml-idp/ssp-idp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssp-idp

spec:
  rules:
    # https://ssp-idp.mm-local.com/simplesaml/
    - host: ssp-idp.mm-local.com
      http:
        paths:
          - path: /simplesaml
            pathType: Prefix
            backend:
              service:
                name:  ssp-idp
                port:
                  number: 8080
